--- a/index.html
+++ b/index.html
@@ -181,12 +181,15 @@ th{background:var(--primary);color:#fff}
       <button id="closeModal" class="btn ghost">إغلاق</button>
     </div>
     <div id="modalBody"></div>
+    <div style="text-align:center;margin-top:12px">
+      <button id="printStudentBtn" class="btn">🖨️ طباعة الاستمارة</button>
+    </div>
   </div>
 </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js";
-import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc, updateDoc } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
+import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
 
 const firebaseConfig = {
   apiKey: "API_KEY_HERE",
@@ -207,7 +210,7 @@ const addSubjectBtn = document.getElementById("addSubjectBtn");
 
 let studentsData = [];
 
-// إضافة مادة جديدة مع إمكانية إضافة دفعات
+// إضافة مادة جديدة مع دفعات
 addSubjectBtn.addEventListener("click",()=>{
   const div = document.createElement("div");
   div.classList.add("subject-field");
@@ -227,10 +230,16 @@ addSubjectBtn.addEventListener("click",()=>{
   div.querySelector(".addPaymentBtn").addEventListener("click",()=>{
     const payment = prompt("أدخل المبلغ المدفوع:");
     if(payment && !isNaN(payment)){
+      const date = new Date().toLocaleDateString();
       const remainingInput = div.querySelector(".subjRemaining");
       const currentRemaining = parseFloat(remainingInput.value)||0;
       const newRemaining = currentRemaining - parseFloat(payment);
       remainingInput.value = newRemaining>=0?newRemaining:0;
+
+      // إضافة الدفعة مع التاريخ
+      if(!div.payments) div.payments=[];
+      div.payments.push({amount:parseFloat(payment),date});
+      alert("تم تسجيل الدفعة: "+payment+" بتاريخ "+date);
     }
   });
 });
@@ -253,8 +262,9 @@ studentForm.addEventListener("submit", async(e)=>{
     const subjTeacher = sub.querySelector(".subjTeacher").value.trim();
     const subjFee = parseFloat(sub.querySelector(".subjFee").value)||0;
     const subjRemaining = parseFloat(sub.querySelector(".subjRemaining").value)||0;
+    const payments = sub.payments || [];
     if(subjName && subjTeacher){
-      subjects.push({name:subjName,teacher:subjTeacher,fee:subjFee,remaining:subjRemaining,payments:[]});
+      subjects.push({name:subjName,teacher:subjTeacher,fee:subjFee,remaining:subjRemaining,payments});
     }
   });
 
@@ -268,74 +278,6 @@ studentForm.addEventListener("submit", async(e)=>{
     loadStudents();
   }catch(err){console.error(err);alert("خطأ أثناء الحفظ");}
 });
-
-// دالة إنشاء محتوى الاستمارة للطباعة
-function generatePrintForm(student){
-  let subjectsHtml = student.subjects.map(s=>{
-    let paymentsHtml = (s.payments || []).map((p,i)=>`دفعة ${i+1}: ${p}`).join("<br>");
-    return `
-      <tr>
-        <td>${s.name}</td>
-        <td>${s.teacher}</td>
-        <td>${s.fee}</td>
-        <td>${s.remaining}</td>
-        <td>${paymentsHtml || "-"}</td>
-      </tr>
-    `;
-  }).join("");
-
-  return `
-    <div class="print-page" style="padding:20px; font-family:'Cairo',sans-serif; page-break-after:always;">
-      <h2 style="text-align:center">استمارة الطالب</h2>
-      <table style="width:100%;margin-bottom:12px;">
-        <tr><td><b>الاسم:</b> ${student.name}</td><td><b>الهاتف:</b> ${student.phone}</td></tr>
-        <tr><td><b>المرحلة:</b> ${student.stage}</td><td><b>المجموعة:</b> ${student.group}</td></tr>
-        <tr><td><b>المدرسة:</b> ${student.school}</td><td><b>العنوان:</b> ${student.address}</td></tr>
-        <tr><td colspan="2"><b>ملاحظات:</b> ${student.note || "-"}</td></tr>
-      </table>
-      <h3>المواد والأقساط:</h3>
-      <table style="width:100%;border-collapse:collapse;border:1px solid #000;">
-        <thead>
-          <tr style="background:#004aad;color:white;">
-            <th style="border:1px solid #000;padding:6px;">المادة</th>
-            <th style="border:1px solid #000;padding:6px;">المعلم</th>
-            <th style="border:1px solid #000;padding:6px;">إجمالي القسط</th>
-            <th style="border:1px solid #000;padding:6px;">المتبقي</th>
-            <th style="border:1px solid #000;padding:6px;">الدفعات</th>
-          </tr>
-        </thead>
-        <tbody>
-          ${subjectsHtml}
-        </tbody>
-      </table>
-      <div style="margin-top:30px;display:flex;justify-content:space-between;">
-        <div><b>توقيع الطالب:</b> ...................................</div>
-        <div><b>ختم المعهد:</b> ...................................</div>
-      </div>
-    </div>
-  `;
-}
-
-// طباعة استمارة طالب محدد
-function printStudentForm(studentId){
-  const student = studentsData.find(s=>s.id===studentId);
-  if(!student) return;
-  const printWindow = window.open("","_blank");
-  printWindow.document.write('<html><head><title>استمارة الطالب</title></head><body>');
-  printWindow.document.write(generatePrintForm(student));
-  printWindow.document.write('</body></html>');
-  printWindow.document.close();
-  printWindow.print();
-}
-
-// إضافة زر الطباعة لكل طالب في الجدول
-function addPrintButton(tr, student){
-  const btn = document.createElement("button");
-  btn.classList.add("btn","small");
-  btn.innerText="🖨️ طباعة الاستمارة";
-  btn.addEventListener("click",()=>printStudentForm(student.id));
-  tr.querySelector(".actions").appendChild(btn);
-}
 
 // تحميل الطلاب
 async function loadStudents(){
@@ -354,14 +296,13 @@ async function loadStudents(){
       <td>${student.group}</td>
       <td>${student.subjects.map(s=>s.name).join(", ")}</td>
       <td>${student.subjects.map(s=>"إجمالي:"+s.fee+" / المتبقي:"+s.remaining).join("<br>")}</td>
-      <td>${student.subjects.map(s=>"المعلم: "+s.teacher).join("<br>")}</td>
+      <td>${student.subjects.map(s=>"المعلم: "+s.teacher+"<br>"+s.payments.map(p=>p.amount+" بتاريخ "+p.date).join("<br>")).join("<hr>")}</td>
       <td class="actions">
         <button class="btn small" onclick="showStudent('${student.id}')">🔍 التفاصيل</button>
         <button class="btn warn small" onclick="deleteStudent('${student.id}')">🗑️ حذف</button>
       </td>
     `;
     studentsTableBody.appendChild(tr);
-    addPrintButton(tr, student);
   });
   document.getElementById("totalCount").innerText=studentsData.length;
 }
@@ -389,13 +330,37 @@ function showStudent(id){
     <p>ملاحظات: ${student.note}</p>
     <h4>المواد والأقساط:</h4>
     ${student.subjects.map(s=>{
-      return `<b>${s.name}</b> - المعلم: ${s.teacher} - إجمالي القسط: ${s.fee} - المتبقي: ${s.remaining}`;
-    }).join("<br>")}`;
+      return `<b>${s.name}</b> - المعلم: ${s.teacher} - إجمالي القسط: ${s.fee} - المتبقي: ${s.remaining}<br>
+      الدفعات:<br>${s.payments.map(p=>p.amount+" بتاريخ "+p.date).join("<br>")}`;
+    }).join("<hr>")}`;
   modal.classList.add("open");
 }
+
+// إغلاق المودال
 document.getElementById("closeModal").addEventListener("click",()=>{document.getElementById("modal").classList.remove("open")});
 
-// الطباعة
+// طباعة الاستمارة
+document.getElementById("printStudentBtn").addEventListener("click",()=>{
+  const modal = document.getElementById("modal");
+  const printWindow = window.open("","_blank");
+  printWindow.document.write('<html><head><title>استمارة الطالب</title><style>body{font-family:Cairo,sans-serif;direction:rtl;padding:20px;} h3{text-align:center;} table{width:100%;border-collapse:collapse;} th,td{border:1px solid #000;padding:8px;text-align:center;} .footer{margin-top:30px;text-align:right;} </style></head><body>');
+  const student = studentsData.find(s=>s.id===document.querySelector("#studentsTable .selectStudent:checked")?.dataset.id) || studentsData[0];
+  printWindow.document.write(`<h3>استمارة طالب - ${student.name}</h3>
+    <p>الهاتف: ${student.phone}</p>
+    <p>المرحلة: ${student.stage}</p>
+    <p>المجموعة: ${student.group}</p>
+    <p>العنوان: ${student.address}</p>
+    <p>ملاحظات: ${student.note}</p>
+    <table><tr><th>المادة</th><th>المعلم</th><th>إجمالي القسط</th><th>المتبقي</th><th>الدفعات</th></tr>
+    ${student.subjects.map(s=>`<tr><td>${s.name}</td><td>${s.teacher}</td><td>${s.fee}</td><td>${s.remaining}</td><td>${s.payments.map(p=>p.amount+" بتاريخ "+p.date).join("<br>")}</td></tr>`).join("")}
+    </table>
+    <div class="footer"><p>توقيع الطالب: ________</p><p>ختم المعهد: ________</p></div>`);
+  printWindow.document.write('</body></html>');
+  printWindow.document.close();
+  printWindow.print();
+});
+
+// طباعة القائمة
 document.getElementById("printFilteredBtn").addEventListener("click",()=>{window.print();});
 </script>
 </body>
