--- a/teachers.html
+++ b/teachers.html
@@ -12,13 +12,24 @@
   --card:#fff;
 }
 *{box-sizing:border-box}
-body{font-family: 'Cairo',sans-serif;margin:0;background:linear-gradient(180deg,var(--bg),#fff);color:#102027;direction:rtl}
-header{background:linear-gradient(90deg,var(--primary),#007bff);color:#fff;padding:18px 16px;text-align:center;font-size:20px;font-weight:700;box-shadow:0 3px 12px rgba(2,20,40,0.08);}
+body{
+  font-family: 'Cairo',sans-serif;
+  margin:0;background:linear-gradient(180deg,var(--bg),#fff);
+  color:#102027;direction:rtl;
+}
+header{
+  background:linear-gradient(90deg,var(--primary),#007bff);
+  color:#fff;padding:18px 16px;text-align:center;font-size:20px;font-weight:700;
+  box-shadow:0 3px 12px rgba(2,20,40,0.08);
+}
 .wrap{max-width:1200px;margin:22px auto;padding:12px;}
 .card{background:var(--card);border-radius:10px;padding:14px;box-shadow:0 6px 18px rgba(6,20,30,0.06);margin-bottom:16px;}
 .form-grid{display:flex;flex-wrap:wrap;gap:10px}
-input[type="text"], input[type="tel"], input[type="number"], select{padding:10px;border:1px solid #d6dde9;border-radius:8px;font-size:15px;width:100%;}
+input[type="text"], input[type="tel"], input[type="number"], select {
+  padding:10px;border:1px solid #d6dde9;border-radius:8px;font-size:15px;width:100%;
+}
 .two{width:calc(50% - 6px)}
+.three{width:calc(33.333% - 8px)}
 label{display:block;margin-bottom:6px;font-size:13px;color:#37474f}
 .btn{background:var(--primary);color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700}
 .btn.warn{background:#ff7043}
@@ -27,57 +38,59 @@ label{display:block;margin-bottom:6px;font-size:13px;color:#37474f}
 table{width:100%;border-collapse:collapse;margin-top:12px}
 th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px}
 th{background:var(--primary);color:#fff}
+.actions button{margin:0 6px}
+.badge{display:inline-block;padding:4px 8px;border-radius:999px;background:#eef6ff;color:var(--primary);font-weight:700}
 @media print{
   body{background:white;padding:0}
-  header, .card .form-grid, .actions, .filters { display:none !important; }
+  header, .card form, .actions, .filters, #addTeacherBtn { display:none !important; }
   .print-page{box-shadow:none;margin:0;padding:0}
 }
 </style>
 </head>
 <body>
-<header>نظام OMA - إدارة الأساتذة (متكامل)</header>
+<header>نظام OMA - إدارة الأساتذة</header>
 <div class="wrap">
 
+<!-- إضافة أستاذ جديد -->
 <div class="card">
   <strong>أضف أستاذ جديد</strong>
   <form id="teacherForm" style="margin-top:12px">
     <div class="form-grid">
       <div class="two">
         <label>الاسم الكامل</label>
-        <input id="teacherName" type="text" required />
+        <input id="teacherName" type="text" required/>
       </div>
       <div class="two">
-        <label>رقم الهاتف / البريد الإلكتروني</label>
-        <input id="teacherPhone" type="text" />
+        <label>رقم الهاتف</label>
+        <input id="teacherPhone" type="tel" required/>
       </div>
       <div style="width:100%">
-        <label>المواد التي يدرسها</label>
-        <input id="teacherSubjects" type="text" placeholder="مثال: رياضيات، فيزياء" />
+        <label>المواد التي يدرّسها (فصل كل مادة بفاصلة)</label>
+        <input id="teacherSubjects" type="text" placeholder="مثال: رياضيات, فيزياء" required/>
       </div>
-      <div class="two">
-        <label>المجموعة / الكروب</label>
-        <input id="teacherGroup" type="text" />
-      </div>
-      <div class="two">
-        <label>ملاحظة</label>
-        <input id="teacherNote" type="text" />
-      </div>
-      <div style="width:100%;display:flex;gap:8px;justify-content:flex-end">
-        <button id="saveTeacherBtn" class="btn" type="submit">✅ حفظ الأستاذ</button>
+      <div style="width:100%;display:flex;justify-content:flex-end;gap:8px;margin-top:8px;">
+        <button type="submit" class="btn">✅ حفظ الأستاذ</button>
+        <button type="button" id="clearTeacherForm" class="btn ghost">مسح الحقول</button>
       </div>
     </div>
   </form>
 </div>
 
+<!-- قائمة الأساتذة -->
 <div class="card">
-  <strong>قائمة الأساتذة</strong>
+  <div style="display:flex;justify-content:space-between;align-items:center;">
+    <strong>قائمة الأساتذة</strong>
+    <button id="printTeachersBtn" class="btn">🖨️ طباعة الكل</button>
+  </div>
   <table id="teachersTable">
     <thead>
       <tr>
         <th>الاسم</th>
+        <th>الهاتف</th>
         <th>المواد</th>
-        <th>المجموعة</th>
-        <th>المستحقات</th>
+        <th>الإجمالي المستحق</th>
+        <th>المبلغ المسلم</th>
+        <th>المتبقي</th>
         <th>خيارات</th>
       </tr>
     </thead>
@@ -85,21 +98,11 @@ th{background:var(--primary);color:#fff}
   </table>
 </div>
 
-<div id="modal" class="modal" aria-hidden="true" style="display:none;position:fixed;left:0;top:0;right:0;bottom:0;background:rgba(0,0,0,0.45);align-items:center;justify-content:center;z-index:9999;">
-  <div class="box" style="background:white;padding:18px;border-radius:10px;max-width:720px;width:94%;max-height:90vh;overflow:auto;">
-    <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px">
-      <strong id="modalTitle">تفاصيل الأستاذ</strong>
-      <button id="closeModal" class="btn ghost">إغلاق</button>
-    </div>
-    <div id="modalBody"></div>
-    <button id="printTeacherBtn" class="btn" style="margin-top:12px">🖨️ طباعة الاستمارة</button>
-  </div>
-</div>
-
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js";
-import { getFirestore, collection, addDoc, getDocs, doc, deleteDoc } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
+import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc, updateDoc, query } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
 
+// إعداد Firebase
 const firebaseConfig = {
   apiKey: "API_KEY_HERE",
   authDomain: "PROJECT_ID.firebaseapp.com",
@@ -113,77 +116,102 @@ const db = getFirestore(app);
 
 const teacherForm = document.getElementById("teacherForm");
 const teachersTableBody = document.querySelector("#teachersTable tbody");
-const modal = document.getElementById("modal");
-const modalBody = document.getElementById("modalBody");
 
-let teachersData = [];
-
-teacherForm.addEventListener("submit", async (e)=>{
+// حفظ أستاذ جديد
+teacherForm.addEventListener("submit", async(e)=>{
   e.preventDefault();
   const name = document.getElementById("teacherName").value.trim();
   const phone = document.getElementById("teacherPhone").value.trim();
-  const subjects = document.getElementById("teacherSubjects").value.trim().split(",").map(s=>s.trim());
-  const group = document.getElementById("teacherGroup").value.trim();
-  const note = document.getElementById("teacherNote").value.trim();
+  const subjects = document.getElementById("teacherSubjects").value.split(",").map(s=>s.trim()).filter(s=>s);
+
+  if(subjects.length===0){alert("أضف مادة واحدة على الأقل"); return;}
 
   try{
-    await addDoc(collection(db,"teachers"),{name,phone,subjects,group,note,createdAt:new Date()});
+    await addDoc(collection(db,"teachers"),{
+      name,phone,subjects,totalDue:0,paid:0,remaining:0
+    });
     alert("تم حفظ الأستاذ بنجاح");
     teacherForm.reset();
     loadTeachers();
   }catch(err){console.error(err);alert("خطأ أثناء الحفظ");}
 });
 
+// مسح الحقول
+document.getElementById("clearTeacherForm").addEventListener("click",()=>{teacherForm.reset();});
+
+// تحميل قائمة الأساتذة وحساب المستحقات
 async function loadTeachers(){
   const snapshot = await getDocs(collection(db,"teachers"));
   teachersTableBody.innerHTML="";
-  teachersData=[];
   snapshot.forEach(docSnap=>{
-    const teacher={...docSnap.data(),id:docSnap.id};
-    teachersData.push(teacher);
-    const tr=document.createElement("tr");
+    const t = {...docSnap.data(),id:docSnap.id};
+
+    // حساب المستحقات بناءً على الطلاب
+    let totalDue=0;
+    let paid=0;
+    t.subjects.forEach(sub=>{
+      // استعلام الطلاب الذين لديهم هذه المادة
+      // هنا يمكن تطوير بحيث يتم ربط المواد بالطلاب مباشرة
+      // حاليا مجرد مثال: مجموع الدفعات لأي طالب في هذه المادة
+    });
+    const remaining = totalDue - paid;
+
+    const tr = document.createElement("tr");
     tr.innerHTML=`
-      <td>${teacher.name}</td>
-      <td>${teacher.subjects.join(", ")}</td>
-      <td>${teacher.group}</td>
-      <td>0</td>
+      <td>${t.name}</td>
+      <td>${t.phone}</td>
+      <td>${t.subjects.join(", ")}</td>
+      <td>${totalDue}</td>
+      <td>${paid}</td>
+      <td>${remaining}</td>
       <td class="actions">
-        <button class="btn small" onclick="showTeacher('${teacher.id}')">🔍 التفاصيل</button>
-        <button class="btn warn small" onclick="deleteTeacher('${teacher.id}')">🗑️ حذف</button>
-      </td>
-    `;
+        <button class="btn small" onclick="printTeacher('${t.id}')">🖨️ طباعة الاستمارة</button>
+        <button class="btn warn small" onclick="deleteTeacher('${t.id}')">🗑️ حذف</button>
+      </td>`;
     teachersTableBody.appendChild(tr);
   });
 }
 loadTeachers();
 
-window.deleteTeacher=async function(id){
+// حذف أستاذ
+async function deleteTeacher(id){
   if(confirm("هل تريد حذف الأستاذ؟")){
     await deleteDoc(doc(db,"teachers",id));
     loadTeachers();
   }
 }
 
-window.showTeacher=function(id){
-  const teacher=teachersData.find(t=>t.id===id);
-  if(!teacher) return;
-  modalBody.innerHTML=`
-    <h3>${teacher.name}</h3>
-    <p>الهاتف: ${teacher.phone}</p>
-    <p>المجموعة: ${teacher.group}</p>
-    <p>المواد: ${teacher.subjects.join(", ")}</p>
-    <p>ملاحظات: ${teacher.note}</p>
-    <p>المستحق: 0</p>
-    <p>المبلغ المسلم: 0</p>
-    <p>المتبقي: 0</p>
-    <p>توقيع الأستاذ: _____________________</p>
-    <p>ختم المعهد: _____________________</p>
-  `;
-  modal.style.display="flex";
+// طباعة استمارة أستاذ
+async function printTeacher(id){
+  const docSnap = await getDocs(collection(db,"teachers"));
+  const t = docSnap.docs.map(d=>({...d.data(),id:d.id})).find(x=>x.id===id);
+  if(!t) return;
+
+  const printWindow = window.open("","_blank");
+  printWindow.document.write(`<html dir="rtl"><head><title>استمارة الأستاذ</title><style>
+    body{font-family:'Cairo',sans-serif;padding:20px}
+    h2{text-align:center}
+    table{width:100%;border-collapse:collapse;margin-top:12px}
+    th,td{border:1px solid #000;padding:8px;text-align:center}
+    th{background:#004aad;color:#fff}
+  </style></head><body>
+    <h2>استمارة الأستاذ</h2>
+    <p><b>الاسم:</b> ${t.name}</p>
+    <p><b>الهاتف:</b> ${t.phone}</p>
+    <table>
+      <tr><th>المجموع الإجمالي</th><th>المبلغ المسلم</th><th>المتبقي</th></tr>
+      <tr><td>${t.totalDue}</td><td>${t.paid}</td><td>${t.remaining}</td></tr>
+    </table>
+    <p>توقيع الأستاذ: .....................</p>
+    <p>ختم المعهد: .....................</p>
+  </body></html>`);
+  printWindow.document.close();
+  printWindow.print();
 }
 
-document.getElementById("closeModal").addEventListener("click",()=>{modal.style.display="none"});
-document.getElementById("printTeacherBtn").addEventListener("click",()=>{window.print();});
+// طباعة كل الأساتذة
+document.getElementById("printTeachersBtn").addEventListener("click",()=>{window.print();});
+
 </script>
 </body>
 </html>
